test/corpus/date.txt
================================================================================
Date with dashes
================================================================================
2026-01-24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with dashes with omitted zeroes
================================================================================
2026-1-1

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with dashes without the year
================================================================================
01-24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with dashes without the year with omitted zeroes
================================================================================
1-24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with slashes
================================================================================
2026/01/24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with slashes with omitted zeroes
================================================================================
2026/1/1

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with slashes without the year
================================================================================
01/24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with slashes without the year with omitted zeroes
================================================================================
1/24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with dots
================================================================================
2026.01.24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with dots with omitted zeroes
================================================================================
2026.1.1

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with dots without the year
================================================================================
01.24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))

================================================================================
Date with dots without the year with omitted zeroes
================================================================================
1.24

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)))
