test/corpus/date_secondary.txt
================================================================================
Secondary date with dashes
================================================================================
2026-01-24=2026-01-25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with dashes with omitted zeroes
================================================================================
2026-1-1=2026-1-2

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with dashes without the year
================================================================================
01-24=01-25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with dashes without the year with omitted zeroes
================================================================================
1-24=1-25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with slashes
================================================================================
2026/01/24=2026/01/25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with slashes with omitted zeroes
================================================================================
2026/1/1=2026/1/2

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with slashes without the year
================================================================================
01/24=01/25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with slashes without the year with omitted zeroes
================================================================================
1/24=1/25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with dots
================================================================================
2026.01.24=2026.01.25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with dots with omitted zeroes
================================================================================
2026.1.1=2026.1.2

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with dots without the year
================================================================================
01.24=01.25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Secondary date with dots without the year with omitted zeroes
================================================================================
1.24=1.25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (secondary_date)))

================================================================================
Negative secondary date case
================================================================================
1.24 =1.25

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))
