test/corpus/description.txt
================================================================================
A description
================================================================================
2026-01-24 Description

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description with multiple words
================================================================================
2026-01-24 Transaction description with spaces and punctuation. - very cool

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description with comment
================================================================================
2026-01-24 Transaction description ; and comment

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment)))

================================================================================
A description with unicode
================================================================================
2026-01-24 Это тоже описание транзакции, по сути любой текст 🤓

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description with payee and note separated by a pipe
================================================================================
2026-01-24 Payee | Note

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description with extra whitespace around the pipe
================================================================================
2026-01-24 Payee     |      Note

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description that is a bare pipe (empty payee and note)
================================================================================
2026-01-24 |

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description with empty payee (leading pipe)
================================================================================
2026-01-24 | note only

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description with empty note (trailing pipe)
================================================================================
2026-01-24 payee only |

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))

================================================================================
A description with multiple pipes
================================================================================
2026-01-24 a | b | c

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)))
