test/corpus/directive_account.txt
================================================================================
Account directive
================================================================================
account assets:bank:checking

--------------------------------------------------------------------------------

(source_file
  (directive_account
    (account)))

================================================================================
Account directive with same-line comment
================================================================================
account assets:bank:checking    ; same-line comment

--------------------------------------------------------------------------------

(source_file
  (directive_account
    (account)
    (comment)))

================================================================================
Account directive with same-line tag
================================================================================
account assets:bank:checking    ; acctnum:12345

--------------------------------------------------------------------------------

(source_file
  (directive_account
    (account)
    (comment
      (tag))))

================================================================================
Account directive with next-line comment
================================================================================
account assets:bank:checking
  ; next-line comment

--------------------------------------------------------------------------------

(source_file
  (directive_account
    (account)
    (comment)))

================================================================================
Account directive with same-line and next-line comments
================================================================================
account assets:bank:checking    ; same-line comment
  ; next-line comment

--------------------------------------------------------------------------------

(source_file
  (directive_account
    (account)
    (comment)
    (comment)))

================================================================================
Account directive with type tag
================================================================================
account assets    ; type:A

--------------------------------------------------------------------------------

(source_file
  (directive_account
    (account)
    (comment
      (tag))))
