test/corpus/directive_alias.txt
================================================================================
Simple alias
================================================================================
alias assets:checking=bank:main

--------------------------------------------------------------------------------

(source_file
  (directive_alias
    (alias_base)
    (alias_substitute)))

================================================================================
Simple alias with spaces around equals
================================================================================
alias assets:checking = bank:main

--------------------------------------------------------------------------------

(source_file
  (directive_alias
    (alias_base)
    (alias_substitute)))

================================================================================
Regex alias
================================================================================
alias /\./=:

--------------------------------------------------------------------------------

(source_file
  (directive_alias
    (alias_base)
    (alias_substitute)))

================================================================================
Regex alias with spaces around equals
================================================================================
alias /\./ = :

--------------------------------------------------------------------------------

(source_file
  (directive_alias
    (alias_base)
    (alias_substitute)))

================================================================================
Regex alias with capturing group
================================================================================
alias /^([^:]+):[^:]+/=\1

--------------------------------------------------------------------------------

(source_file
  (directive_alias
    (alias_base)
    (alias_substitute)))

================================================================================
Alias with empty substitute
================================================================================
alias assets:checking =

--------------------------------------------------------------------------------

(source_file
  (directive_alias
    (alias_base)))

================================================================================
End aliases directive
================================================================================
end aliases

--------------------------------------------------------------------------------

(source_file
  (directive_end_aliases))
