test/corpus/directive_commodity.txt
================================================================================
Commodity directive with left symbol
================================================================================
commodity $1000.00

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (amount
      (commodity)
      (quantity))))

================================================================================
Commodity directive with right symbol
================================================================================
commodity 1.000,00 EUR

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (amount
      (quantity)
      (commodity))))

================================================================================
Commodity directive with no symbol
================================================================================
commodity 1 000 000.0000

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (amount
      (quantity))))

================================================================================
Commodity directive with trailing decimal mark
================================================================================
commodity 1000. AAAA

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (amount
      (quantity)
      (commodity))))

================================================================================
Commodity directive with quoted symbol
================================================================================
commodity 1.0000 "AAAA 2023"

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (amount
      (quantity)
      (commodity))))

================================================================================
Symbol-only directive, left symbol
================================================================================
commodity $

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (commodity)))

================================================================================
Symbol-only directive, word symbol
================================================================================
commodity INR

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (commodity)))

================================================================================
Symbol-only directive, quoted symbol
================================================================================
commodity "AAAA 2023"

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (commodity)))

================================================================================
Commodity directive with comment
================================================================================
commodity $1000.00    ; some comment

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (amount
      (commodity)
      (quantity))
    (comment)))

================================================================================
Commodity directive with tag
================================================================================
commodity $1000.00    ; type:currency

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (amount
      (commodity)
      (quantity))
    (comment
      (tag))))

================================================================================
Commodity directive with format subdirective
================================================================================
commodity INR
  format INR 1,00,00,000.00

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (commodity)
    (commodity_format
      (amount
        (commodity)
        (quantity)))))

================================================================================
Commodity directive with format subdirective and comment
================================================================================
commodity USD
  format 1.00 USD    ; some comment

--------------------------------------------------------------------------------

(source_file
  (directive_commodity
    (commodity)
    (commodity_format
      (amount
        (quantity)
        (commodity))
      (comment))))
