test/corpus/directive_include.txt
================================================================================
Include directive with simple filename
================================================================================
include accounts.journal

--------------------------------------------------------------------------------

(source_file
  (directive_include
    (path)))

================================================================================
Include directive with relative path
================================================================================
include ../finances/main.journal

--------------------------------------------------------------------------------

(source_file
  (directive_include
    (path)))

================================================================================
Include directive with home directory path
================================================================================
include ~/main.journal

--------------------------------------------------------------------------------

(source_file
  (directive_include
    (path)))

================================================================================
Include directive with absolute path
================================================================================
include /home/user/main.journal

--------------------------------------------------------------------------------

(source_file
  (directive_include
    (path)))

================================================================================
Include directive with file type prefix
================================================================================
include timedot:notes/2023.md

--------------------------------------------------------------------------------

(source_file
  (directive_include
    (path)))

================================================================================
Include directive with glob pattern
================================================================================
include *.journal

--------------------------------------------------------------------------------

(source_file
  (directive_include
    (path)))

================================================================================
Include directive with recursive glob pattern
================================================================================
include **.journal

--------------------------------------------------------------------------------

(source_file
  (directive_include
    (path)))
