test/corpus/directive_payee.txt
================================================================================
Payee directive
================================================================================
payee Whole Foods

--------------------------------------------------------------------------------

(source_file
  (directive_payee
    (payee)))
